--- a/scss/app.scss
+++ b/scss/app.scss
@@ -1,6 +1,7 @@
 @import "settings";
 @import "foundation";
 @import "datepicker";
+@import "pikaday";
 
 // Or selectively include components
 // @import
